Some small changes to Intro to Git

--- a/Computing/Intro_Git.ipynb
+++ b/Computing/Intro_Git.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# An Interactive Git Tutorial\n",
     "\n",
-    "Contests created by Fernando Pérez and Facundo Sapienza for the course [Collaborative and Reproducible Data Science](https://ucb-stat-159-s22.github.io/site/overview.html). \n",
+    "Contents created by Fernando Pérez and Facundo Sapienza for the course [Collaborative and Reproducible Data Science](https://ucb-stat-159-s22.github.io/site/overview.html). \n",
     "\n",
-    "In this notebook, you will find all the needed information to work collaborative using version control with git. \n",
+    "In this notebook, you will find all the needed information to work collaboratively using version control with git. \n",
     "\n",
     "Learning goals:\n",
     "- Introduction to version control and git workflows\n",
@@ -64,17 +64,28 @@
     "\n",
     "If instead you have an exisiting repository, you can directly clone it or fork it to your GitHub. \n",
     "\n",
-    "**clone**: when cloniong a repository, you are getting a local version of an existing repository. When making changes (commits and push) to this repository, you will change the original repository you have cloned. To clone an exisiting repository, \n",
+    "#### clone\n",
+    "\n",
+    "When cloning a repository, you are getting a local version of an existing repository. When making changes (commits and push) to this repository, you will change the original repository you have cloned. To clone an exisiting repository, \n",
     "```bash\n",
     "git clone <repository url>\n",
     "```\n",
     "where `<repository url>` can be found directly in the repository GitHub page: \n",
     "\n",
+    "\n",
     "![image.png](images/git_clone.png)\n",
     "\n",
-    "**fork**: Forking an exisiting repository means to create a copy of such repository under your GitHub accounts. In this way, there are two different repositories and this allows you to make changes to your copy of the repository without affecting the integrity of the original repository. This is useful and recommendable when working collaborativelly in a project. Integrating your changes to the original repository can be done by doing a pull request, which we will explore later in this tutorial. In order to fork an exisiting repository, go to the GitHub page of the repository and in the upper right corner you can find the buttom `Fork` \n",
+    "#### fork\n",
+    "\n",
+    "Forking an exisiting repository means to create a copy of such repository under your GitHub accounts. In this way, there are two different repositories and this allows you to make changes to your copy of the repository without affecting the integrity of the original repository. This is useful and recommendable when working collaborativelly in a project. Integrating your changes to the original repository can be done by doing a pull request, which we will explore later in this tutorial. In order to fork an exisiting repository, go to the GitHub page of the repository and in the upper right corner you can find the buttom `Fork` \n",
+    "\n",
+    "\n",
     "![image.png](images/git_fork.png)\n",
-    "and then create such copy under your personal GitHub account\n",
+    "\n",
+    "\n",
+    "and then create a copy under your personal GitHub account\n",
+    "\n",
+    "\n",
     "![image.png](images/git_fork2.png)"
    ]
   },
@@ -85,7 +96,7 @@
    "source": [
     "### Making changes\n",
     "\n",
-    "In order to keep track of the changes you made to the files in the repositrory, you need to notify git about which files and which changes do you want to keep track of. The workflow for doing this consists in three commands you execute from the command line \n",
+    "In order to keep track of the changes you make to the files in the repositrory, you need to notify git about which files and which changes do you want to keep track of. The workflow for doing this consists in three commands you execute from the command line \n",
     "```bash\n",
     "git add market_list.txt\n",
     "git commit -m'I need milk and cereals'\n",
@@ -93,11 +104,17 @@
     "```\n",
     "A few comments about these commands\n",
     "\n",
-    "**add**: We need to specify the names of the files we want to keep changes of. You can instead use `git add --all` or `git add *` for adding all the files in the repository, but this is ussualy bad practice and dangerours in general (unless this is your first `git add`). \n",
+    "#### add\n",
     "\n",
-    "**commit**: In the commit above, we  used the `-m` flag to specify a message at the command line.  If we don't do that, git will open the editor we specified in our configuration above and require that we enter a message.  By default, git refuses to record changes that don't have a message to go along with them (though you can obviously 'cheat' by using an empty or meaningless string: git only tries to facilitate best practices, it's not your nanny).\n",
+    "We need to specify the names of the files we want to keep changes of. You can instead use `git add --all` or `git add *` for adding all the files in the repository, but this is ussualy bad practice and dangerours in general (unless this is your first `git add`). \n",
     "\n",
-    "**push**: These command is no really necessary to execute after each commit. When create a commit message, you notify git about changes in some files. This changes are keep recorder in your _local_ version of the repository (the one you have access thought the machine you are using). When you `git push`, you sincronize the local version of your repository with the _remote_ version of the repository, that is, the version storaged online in GitHub. Usually, you do a push when you want your changes to be reflected in GitHub, for example, when you want to share the changes with your collaborators or when you finish your day of work and want to be sure that a remote copy of you work is keep safe.\n",
+    "#### commit\n",
+    "\n",
+    "In the commit above, we  used the `-m` flag to specify a message at the command line.  If we don't do that, git will open the editor we specified in our configuration above and require that we enter a message.  By default, git refuses to record changes that don't have a message to go along with them (though you can obviously 'cheat' by using an empty or meaningless string: git only tries to facilitate best practices, it's not your nanny).\n",
+    "\n",
+    "#### push\n",
+    "\n",
+    "These command is no really necessary to execute after each commit. When create a commit message, you notify git about changes in some files. This changes are keep recorder in your _local_ version of the repository (the one you have access thought the machine you are using). When you `git push`, you sincronize the local version of your repository with the _remote_ version of the repository, that is, the version storaged online in GitHub. Usually, you do a push when you want your changes to be reflected in GitHub, for example, when you want to share the changes with your collaborators or when you finish your day of work and want to be sure that a remote copy of you work is keep safe.\n",
     "\n",
     "**Remote repositories**\n",
     "\n",
@@ -125,7 +142,7 @@
    "source": [
     "**Why to work in different branches?**\n",
     "\n",
-    "> Working in different branches allows you to develop code without altering the main structure and cod of the repository. Branches can be merged and the changes you implemented in a new branches can be incorporated to the main code. Having exploratory code in a different branch allows you to explore ideas without affecting the integrity of the code at the same time you can version control these changes.\n",
+    "> Working in different branches allows you to develop code without altering the main structure and code of the repository. Branches can be merged and the changes you implemented in a new branches can be incorporated to the main code. Having exploratory code in a different branch allows you to explore ideas without affecting the integrity of the code at the same time you can version control these changes.\n",
     "\n",
     "The basic git command to move between branches is `git switch`. This allows you to both create a new branch (adding the flag `-c`) and move to it and comeback to the main branch. \n",
     "```bash\n",
@@ -165,7 +182,14 @@
     "\n",
     "Once created, you can add further comments about the changes that the pull request will incorportate. At this point, you can also assign project member to review and approved your changes. \n",
     "\n",
-    "![image.png](images/git_PR2.png)"
+    "![image.png](images/git_PR2.png)\n",
+    "\n",
+    "\n",
+    "### Code reviews\n",
+    "\n",
+    "The main advantage of pull request in collaborative projects is that it helps review incoming changes in the main repository. This is normally done through a code review, which is normally done by a separate user who can provide a critical eye on the changes being pushed. During the code review, comments can be added, and individual (lines or file) changes can be accepted or discarded in order to help decision making. The author of the pull request then can perform further changes in new commits, update the pull request and iterate through this process until everyone is happy.\n",
+    "\n",
+    "Another important part of this process, which will not be covered in this material, is the fact that pull requests allow triggering integration tests in a repository, which allow tracking any breaking changes into the codebase. "
    ]
   },
   {
@@ -175,7 +199,7 @@
    "source": [
     "## Recovering past versions\n",
     "\n",
-    "Sometimes we make accidental changes to some of the files in a repository, or maybe we just want to comeback to a previous version. In any case, it is easy to restore or even recover old versions of files that have been track in a commit message. "
+    "Sometimes we make accidental changes to some of the files in a repository, or maybe we just want to come back to a previous version. In any case, it is easy to restore or even recover old versions of files that have been track in a commit message. "
    ]
   },
   {
