fix title headings

--- a/Computing/Intro_Environments.ipynb
+++ b/Computing/Intro_Environments.ipynb
@@ -20,7 +20,7 @@
    "id": "631bae3e-0265-4a9b-acd2-166f4c88bc2d",
    "metadata": {},
    "source": [
-    "## Conda environments\n",
+    "# Conda environments\n",
     "\n",
     "Notes on conda..."
    ]
@@ -54,7 +54,7 @@
    "id": "2148cc2e-13bd-4b6a-bed8-26438879850b",
    "metadata": {},
    "source": [
-    "## Local installation: JupyterLab in your machine\n",
+    "# Local installation: JupyterLab in your machine\n",
     "\n",
     "The goal of these notes is to help you setup your local machine with the JupyterLab we are using for the workshop. Even if you already have conda installed in your local machine, it's not a bad idea to reset the conda install. The idea is to have a very simplistic `base` environment from which you can launch JupyterLab and connect it to the kernels associated to other environmnets you create (eg, the ones used during the projects)."
    ]
@@ -64,7 +64,7 @@
    "id": "b4b28cfc-b922-48c8-97a7-639e5776f3fe",
    "metadata": {},
    "source": [
-    "### Step 1: Installation and configuration of miniconda\n",
+    "## Step 1: Installation and configuration of miniconda\n",
     "\n",
     "Instead of installing conda with the full package management system and many Python libraries, we are going to install [Miniconda](https://docs.conda.io/en/latest/miniconda.html), a minimalist version of conda that included the package management tool and a small number of useful packages. If you already have conda installed in your machine, you may not need to do this. An easy way to check if conda is installed in your computer is by entering `conda --help` in the terminal. You are also welcome to install conda from zero by removing all conda directories and installing miniconda. \n",
     "\n",
@@ -114,7 +114,7 @@
    "id": "42be0e5e-9cb0-429d-ac6e-361582f8f321",
    "metadata": {},
    "source": [
-    "### Step 2: Setting the Hub environment in local\n",
+    "## Step 2: Setting the Hub environment in local\n",
     "\n",
     "Once you have installed miniconda, you can create virtual environments from a `yml` file just as we did in the Hub. As a first step, we are going to create a virtual environment with the same configuration we have in the Hub. The configuration file `environment.yml` for the Hub is available at the [site repository for the course](https://github.com/UCB-stat-159-s22/site). Before using `environment.yml` to create a new environment, take a look to the text file and try to identify parts of the file that are not necessary or irrelevant to create the Hub environment; you will have to remove the last lines of the file that include the pip instructions for the requirements of the JupyterBook we use for the website, which are not necessary for the creation of the virtual environment.\n",
     "\n",
