updated info about conda environments

--- a/Computing/Intro_Environments.ipynb
+++ b/Computing/Intro_Environments.ipynb
@@ -22,7 +22,13 @@
    "source": [
     "# Conda environments\n",
     "\n",
-    "Notes on conda..."
+    "Managing conda environment in Python is a very useful skill that allows you to have multiple working spaces in the same machine, from where you can run different libraries or even different version of Python. It is usually recommendable to have a `base` environment with a default version of Python and standard libraries, such as numpy, pandas and matplotlib, and then create new virtual environmnets when working is specific projects. \n",
+    "\n",
+    "In the JupyterHub, we have already setted up a series of conda environments that you can use during the course. You can see all the availables environments by oppening a new terminal and entering `conda env list`. In order to activate a new environment (for example, in case you want to add a package), you can use `conda activate <environment name>`. You will find these environments listed:\n",
+    "- `base` and `notebook`: These are default environmnts you can use to explore. \n",
+    "- `Finse_MB_oggm`: Virtual environment use for Project No1\n",
+    "- `Finse_CNN`: Virtual environment use for Project No2\n",
+    "When opening a Jupyter noteboo"
    ]
   },
   {
