--- a/Computing/Intro_Environments.ipynb
+++ b/Computing/Intro_Environments.ipynb
@@ -28,32 +28,8 @@
     "- `base` and `notebook`: These are default environmnts you can use to explore. \n",
     "- `Finse_MB_oggm`: Virtual environment use for Project No1\n",
     "- `Finse_CNN`: Virtual environment use for Project No2\n",
-    "When opening a Jupyter noteboo"
+    "When opening a Jupyter notebook, be sure the kernel is seted up with the right virtual envrionment. In order to do so, you can go to the upper right corner of the notebook, select the kernel option and click the option with the desired name of the conda virtual environment. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54224aee-1057-4782-ada7-27759a133d3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b0bee9a-238c-411b-a951-df774bf9c52e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37f8b685-0cc7-4f46-9518-254fc3edac11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
