--- a/Stats/linear_regression.ipynb
+++ b/Stats/linear_regression.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Linear Regression\n",
+    "# An Introduction to Linear Regression and Regularization\n",
     "\n",
     "A notebook by Ellianna Abrahams\n",
     "\n",
